fixed the non-visible text on the index

--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -48,6 +48,7 @@
   line-height: 90px;
   font-weight: 900;
   margin-bottom: 30px;
+  color: white;
 }
 
 .subHeader {
@@ -106,6 +107,7 @@
   font-size: 50px;
   margin-bottom: 20px;
   text-align: center;
+  color: white;
 }
 
 .subtitle {
@@ -133,6 +135,7 @@
   align-items: center;
   padding: 0 20px;
   row-gap: 16px;
+  color: white;
 }
 
 .singleFeatureWrapper p {
